--- a/app/views/pictures/confirm.html.erb
+++ b/app/views/pictures/confirm.html.erb
@@ -1,15 +1,18 @@
 <div class="container">
   <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
     <h3>以下の内容で、送信する。</h3>
-    
+
     <%= form_for(@picture) do |f| %>
       <%= f.hidden_field :title %>
       <%= f.hidden_field :content %>
       <p>タイトル:<%= @picture.title %></p>
-      <p>本文:<%= @picture.content %></p>
+      <p>コメント:<%= @picture.content %></p>
+      <% if @picture.image? %>
+        <p>ピクチャー:<%= image_tag @picture.image.url %></p>
+      <% end %>
       <%= f.submit "登録",class: 'btn btn-primary btn-block' %>
     <% end %>
-    
+
     <%= form_for(@picture, url: new_picture_path, method: 'get') do |f| %>
       <%= f.hidden_field :title %>
       <%= f.hidden_field :content %>
