--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -3,7 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 header {
   width: 100%;
-  background-color: #2c3e50;
+  color: #fff;
+  font-weight: bold;
+  background-color: #fff;
   height: 54px;
 }
 
@@ -15,28 +17,7 @@ header {
     color: white;
     margin-bottom: 0px;
 }
-.navbar-default {
-  .navbar-brand {
-    color: #ccc;
-    &:hover {
-      color: white;
-    }
-  }
-  .navbar-nav > li > a {
-    color: #ccc;
-    &:hover, &:focus {
-      color: white;
-    }
-  }
-  .navbar-nav > .open > a {
-    background-color: transparent;
-    color: white;
-    &:hover, &:focus {
-      background-color: transparent;
-      color: white;
-    }
-  }
-}
+
 @media (max-width: 767px) {
 .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     color: #ccc;
@@ -57,7 +38,6 @@ header {
   padding-bottom: 15%;
   width: 100%;
   background-size: cover;
-  background-image: url("header.jpg");
   background-attachment: fixed;
 }
 
@@ -99,6 +79,7 @@ html {
 
 body {
   text-align: center;
+  background: #fafafa;
 }
 
 .page-top-btn {
