--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "Instagram", root_path, class: "navbar-brand" %>
+          <%= link_to image_tag('kamera.png', :size => '50x50'), root_path, class: "img" %>
         </div>
+        <%= link_to "Instagram" , root_path, class: "navbar-brand" %>
+
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
